# RP2040-PiZero-BlinkLed

./: CMakeLists.txt  main.c
